Fix period wrapping on mobilde devices

--- a/app/assets/stylesheets/applicant.css.sass
+++ b/app/assets/stylesheets/applicant.css.sass
@@ -42,5 +42,10 @@
       cursor: pointer
     li
       list-style: none
+
   .timeline
     min-height: 900px
+    
+  .period span
+    display: inline-block
+    margin-right: 5px
